"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

Changes for 1.10.0:
------------------------------------------------------------------------------
gtk-v2/src/info.c: For extended message handling, special case the
    MSG_TYPE_SIGN - the 1.x server puts a number in front of the message to
    denote it is auto apply - strip it off in the gtk2 client.  Not an
    issue as far as 2.x goes, as the server doesn't prefix the message
    anymore.
MSW 2007-02-11

gtk-v2/gtk-v2.glade: Apply patch 1636013 - standardize on underscored
   widget names.  Patch by Veli-Matti Valtonen - maligor.
MSW 2007-02-06

Fix for bug #1538948: Assertion failure for map2 command.
Add checks for x,y and layer validity in the Map2Cmd.
Note that invalid values are not discarded, but clipped to valid ones.
 common/commands.c: add checks.
 common/mapdata.[ch]: move #define to header for access outside .c.
Ryo 2007-01-07

Merge patch #1558073: newpickup flesh courtesy bencha
 gtk/gx11.c
 gtk-v2/gtk-v2.glade
 gtk-v2/src/callbacks.h gtk2proto.h interface.c pickup.c
Ryo 2006-11-29

common/Makefile.am: Change svnversion.h generation to not update the file
   unless it needs updating.
Alex Schultz 2006-11-09

Fix problem in display logic when the size of the image was not a multiple
of the map_image_size.  This shows up when using tall character images.
It also shows up when using different -mapscale options due to rounding
errors - in both cases now, things are drawn correctly.
--
gtk/map.c: Add size parameters to draw_pixmap().  Add logic to figure out 
  proper offsets for drawing odd sized images.
gtk/sdl.c: Add logic to figure out proper offsets for drawing these odd
  sized images.
gtk-v2/src/map.c: Add size parameters to draw_pixmap().  Add logic to figure
  out proper offsets for drawing odd sized images.
gtk-v2/src/sdl.c: Add logic to figure out proper offsets for drawing these
  odd sized images.
MSW 2006-11-05
