@@ -347,7 +347,7 @@ void init_common_cache_data()
     memset(image_cache, 0, IMAGE_HASH * sizeof(struct Image_Cache));
 
 
-    sprintf(bmaps,"%s/bmaps.client",DATADIR);
+    sprintf(bmaps,"%s/bmaps.client",CF_DATADIR);
     if ((fp=fopen(bmaps,"r"))!=NULL) {
 	while (fgets(inbuf, MAX_BUF-1, fp)!=NULL) {
 	    image_process_line(inbuf, 1);
@@ -435,7 +435,7 @@ void finish_face_cmd(int pnum, uint32 checksum, int has_sum, char *face, int fac
 	}
 	if (ce->ispublic)
 	    sprintf(filename,"%s/%s",
-		    DATADIR, ce->filename);
+		    CF_DATADIR, ce->filename);
 	else
 	    sprintf(filename,"%s/.crossfire/crossfire-images/%s",
 		    getenv("HOME"), ce->filename);
