@@ -2,6 +2,13 @@
 Top of CVS tree:
 ------------------------------------------------------------------------------
 
+Rename DATADIR to CF_DATADIR to avoid name clashes when cross-compiling to
+Win32.
+---
+gtk/win32/config.h, configure.in, common/image.c, common/config.h.in,
+gnome/gnome.c, gnome/gnome-sound.c: Replace DATADIR by CF_DATADIR.
+Andreas Kirschbaum 2007-04-16
+
 Changes for 1.10.0:
 ------------------------------------------------------------------------------
 gtk-v2/src/info.c: For extended message handling, special case the
